--- a/.github/workflows/shared_steps/action.yml
+++ b/.github/workflows/shared_steps/action.yml
@@ -1,8 +1,4 @@
 name: "Shared Build Steps"
-inputs:
-  repo_root_path:
-    description: "Path to flexiv_rdk repo"
-    required: true
 runs:
   using: "composite"
   steps:
@@ -11,7 +7,6 @@ runs:
       shell: bash
       run: |
         pwd
-        ls
         cd thirdparty
         bash build_and_install_dependencies.sh ~/rdk_install 4
 
@@ -19,7 +14,7 @@ runs:
     - name: Build and install library
       shell: bash
       run: |
-        cd ${{ inputs.repo_root_path }}
+        pwd
         mkdir -p build && cd build
         cmake .. -DCMAKE_INSTALL_PREFIX=~/rdk_install
         make install
@@ -28,7 +23,8 @@ runs:
     - name: Build examples
       shell: bash
       run: |
-        cd ${{ inputs.repo_root_path }}/example
+        pwd
+        cd example
         mkdir -p build && cd build
         cmake .. -DCMAKE_INSTALL_PREFIX=~/rdk_install
         make -j4
@@ -37,7 +33,8 @@ runs:
     - name: Build tests
       shell: bash
       run: |
-        cd ${{ inputs.repo_root_path }}/test
+        pwd
+        cd test
         mkdir -p build && cd build
         cmake .. -DCMAKE_INSTALL_PREFIX=~/rdk_install
         make -j4
