--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,11 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Release" "Debug" "RelWithDebInfo")
 
-# Configure Python RDK
-option(INSTALL_PYTHON_RDK "Install Python RDK (to user site packages path)" OFF)
+# Which libraries to install
+option(INSTALL_CPP_RDK "Install RDK C++ library (as a CMake target)" ON)
+option(INSTALL_PYTHON_RDK "Install RDK Python library (to the user site packages path)" OFF)
+
+# Configure Python version
 if(INSTALL_PYTHON_RDK)
   if(NOT RDK_PYTHON_VERSION)
     set(RDK_PYTHON_VERSION 3.10 CACHE STRING "Python version to install RDK for" FORCE)
@@ -22,8 +25,8 @@ if(INSTALL_PYTHON_RDK)
 endif()
 
 # Set C++ and Python library filename
-message("OS: ${CMAKE_SYSTEM_NAME}")
-message("Processor: ${CMAKE_SYSTEM_PROCESSOR}")
+message(STATUS "OS: ${CMAKE_SYSTEM_NAME}")
+message(STATUS "Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
     set(RDK_CPP_LIB "libflexiv_rdk.x86_64-linux-gnu.a")
@@ -51,67 +54,71 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 endif()
 
 # ===================================================================
-#      PROJECT DEPENDENCIES
+#      C++ LIBRARY DEPENDENCIES
 # ===================================================================
-# Threads
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-if(Threads_FOUND)
-  message(STATUS "Found Threads: HAVE_PTHREAD = ${THREADS_HAVE_PTHREAD_ARG}")
-endif()
+if(INSTALL_CPP_RDK)
+  # Threads
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
+  find_package(Threads REQUIRED)
+  if(Threads_FOUND)
+    message(STATUS "Found Threads: HAVE_PTHREAD = ${THREADS_HAVE_PTHREAD_ARG}")
+  endif()
 
-# Eigen3
-find_package(Eigen3 REQUIRED)
-if(Eigen3_FOUND)
-  message(STATUS "Found Eigen3: ${Eigen3_DIR}")
-endif()
+  # Eigen3
+  find_package(Eigen3 REQUIRED)
+  if(Eigen3_FOUND)
+    message(STATUS "Found Eigen3: ${Eigen3_DIR}")
+  endif()
 
-# spdlog
-find_package(spdlog REQUIRED)
-if(spdlog_FOUND)
-  message(STATUS "Found spdlog: ${spdlog_DIR}")
-endif()
+  # spdlog
+  find_package(spdlog REQUIRED)
+  if(spdlog_FOUND)
+    message(STATUS "Found spdlog: ${spdlog_DIR}")
+  endif()
 
-# Fast-DDS (Fast-RTPS)
-find_package(fastrtps 2.6.7 REQUIRED)
-if(fastrtps_FOUND)
-  message(STATUS "Found fastrtps: ${fastrtps_DIR}")
+  # Fast-DDS (Fast-RTPS)
+  find_package(fastrtps 2.6.7 REQUIRED)
+  if(fastrtps_FOUND)
+    message(STATUS "Found fastrtps: ${fastrtps_DIR}")
+  endif()
 endif()
 
 # ===================================================================
 #      INSTALL C++ LIBRARY
 # ===================================================================
-# Create an INTERFACE library with no source file to compile
-add_library(${PROJECT_NAME} INTERFACE)
+if(INSTALL_CPP_RDK)
+  # Create an INTERFACE library with no source file to compile
+  add_library(${PROJECT_NAME} INTERFACE)
 
-# Create an alias of the library using flexiv namespace,
-# to imitate the install target which uses flexiv namespace.
-add_library(flexiv::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+  # Create an alias of the library using flexiv namespace,
+  # to imitate the install target which uses flexiv namespace.
+  add_library(flexiv::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
-target_include_directories(${PROJECT_NAME} INTERFACE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
+  target_include_directories(${PROJECT_NAME} INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+  )
 
-target_link_libraries(${PROJECT_NAME} INTERFACE
-  ${CMAKE_CURRENT_SOURCE_DIR}/lib/${RDK_CPP_LIB}
-  Threads::Threads
-  Eigen3::Eigen
-  spdlog::spdlog
-  fastrtps
-)
+  target_link_libraries(${PROJECT_NAME} INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/lib/${RDK_CPP_LIB}
+    Threads::Threads
+    Eigen3::Eigen
+    spdlog::spdlog
+    fastrtps
+  )
 
-# Use moderate compiler warning option
-if(CMAKE_HOST_UNIX)
-  target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra)
-else()
-  target_compile_options(${PROJECT_NAME} INTERFACE /W1)
+  # Use moderate compiler warning option
+  if(CMAKE_HOST_UNIX)
+    target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra)
+  else()
+    target_compile_options(${PROJECT_NAME} INTERFACE /W1)
+  endif()
+
+  # Install the INTERFACE library
+  message(STATUS "C++ RDK library: ${RDK_CPP_LIB}")
+  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FlexivInstallLibrary.cmake)
+  FlexivInstallLibrary()
 endif()
-
-# Install the INTERFACE library
-message(STATUS "C++ RDK library: ${RDK_CPP_LIB}")
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FlexivInstallLibrary.cmake)
-FlexivInstallLibrary()
 
 # ===================================================================
 #      INSTALL PYTHON LIBRARY
