--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.16.3)
 # ===================================================================
 #      PROJECT SETUP
 # ===================================================================
-project(flexiv_rdk VERSION 1.5.1)
+project(flexiv_rdk VERSION 1.6.0)
 
 # Configure build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -11,40 +11,26 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Release" "Debug" "RelWithDebInfo")
 
-# Configure Python RDK
-option(INSTALL_PYTHON_RDK "Install Python RDK (to user site packages path)" OFF)
-if(INSTALL_PYTHON_RDK)
-  if(NOT RDK_PYTHON_VERSION)
-    set(RDK_PYTHON_VERSION 3.10 CACHE STRING "Python version to install RDK for" FORCE)
-  endif()
-  set_property(CACHE RDK_PYTHON_VERSION PROPERTY STRINGS "3.10" "3.12")
-  find_package(Python3 ${RDK_PYTHON_VERSION} EXACT COMPONENTS Interpreter REQUIRED)
-endif()
-
-# Set C++ and Python library filename
-message("OS: ${CMAKE_SYSTEM_NAME}")
-message("Processor: ${CMAKE_SYSTEM_PROCESSOR}")
+# Set static library according to platform
+message(STATUS "OS: ${CMAKE_SYSTEM_NAME}")
+message(STATUS "Processor: ${CMAKE_SYSTEM_PROCESSOR}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
-    set(RDK_CPP_LIB "libflexiv_rdk.x86_64-linux-gnu.a")
-    set(RDK_PY_LIB "flexivrdk.cpython-${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}-x86_64-linux-gnu.so")
+    set(RDK_STATIC_LIB "libflexiv_rdk.x86_64-linux-gnu.a")
   elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
-    set(RDK_CPP_LIB "libflexiv_rdk.aarch64-linux-gnu.a")
-    set(RDK_PY_LIB "flexivrdk.cpython-${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}-aarch64-linux-gnu.so")
+    set(RDK_STATIC_LIB "libflexiv_rdk.aarch64-linux-gnu.a")
   else()
     message(FATAL_ERROR "Linux with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm64")
-    set(RDK_CPP_LIB "libflexiv_rdk.arm64-darwin.a")
-    set(RDK_PY_LIB "flexivrdk.cpython-${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}-darwin.so")
+    set(RDK_STATIC_LIB "libflexiv_rdk.arm64-darwin.a")
   else()
     message(FATAL_ERROR "Mac with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64")
-    set(RDK_CPP_LIB "flexiv_rdk.win_amd64.lib")
-    set(RDK_PY_LIB "flexivrdk.cp${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}-win_amd64.pyd")
+    set(RDK_STATIC_LIB "flexiv_rdk.win_amd64.lib")
   else()
     message(FATAL_ERROR "Windows with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
@@ -79,7 +65,7 @@ if(fastrtps_FOUND)
 endif()
 
 # ===================================================================
-#      INSTALL C++ LIBRARY
+#      CREATE LIBRARY
 # ===================================================================
 # Create an INTERFACE library with no source file to compile
 add_library(${PROJECT_NAME} INTERFACE)
@@ -94,7 +80,7 @@ target_include_directories(${PROJECT_NAME} INTERFACE
 )
 
 target_link_libraries(${PROJECT_NAME} INTERFACE
-  ${CMAKE_CURRENT_SOURCE_DIR}/lib/${RDK_CPP_LIB}
+  ${CMAKE_CURRENT_SOURCE_DIR}/lib/${RDK_STATIC_LIB}
   Threads::Threads
   Eigen3::Eigen
   spdlog::spdlog
@@ -109,24 +95,5 @@ else()
 endif()
 
 # Install the INTERFACE library
-message(STATUS "C++ RDK library: ${RDK_CPP_LIB}")
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FlexivInstallLibrary.cmake)
 FlexivInstallLibrary()
-
-# ===================================================================
-#      INSTALL PYTHON LIBRARY
-# ===================================================================
-if(INSTALL_PYTHON_RDK)
-  # Get user site packages path
-  message(STATUS "Python executable: ${Python3_EXECUTABLE}")
-  execute_process(
-    COMMAND ${Python3_EXECUTABLE} -c "import site; print(site.getusersitepackages())"
-    OUTPUT_VARIABLE USER_SITE
-    OUTPUT_STRIP_TRAILING_WHITESPACE
-  )
-  message(STATUS "Python site packages path: ${USER_SITE}")
-
-  # Install Python RDK to user site packages path
-  message(STATUS "Python RDK library: ${RDK_PY_LIB}")
-  install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib_py/${RDK_PY_LIB}" DESTINATION ${USER_SITE})
-endif()
