Add QNX to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,14 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   else()
     message(FATAL_ERROR "Windows with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
   endif()
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "QNX")
+  if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
+    set(RDK_STATIC_LIB "libflexiv_rdk.x86_64-qnx.a")
+  elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64le")
+    set(RDK_STATIC_LIB "libflexiv_rdk.aarch64-qnx.a")
+  else()
+    message(FATAL_ERROR "Linux with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
+  endif()
 endif()
 
 # ===================================================================
