Add new test test_repeated_instantiation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 # Tests for Windows
 set(TEST_LIST
   test_dynamics_engine
+  test_repeated_instantiation
 )
 
 # Additional tests for Linux and Mac
