--- a/cmake/flexiv_rdk-config.cmake.in
+++ b/cmake/flexiv_rdk-config.cmake.in
@@ -6,6 +6,7 @@ find_dependency(Threads REQUIRED)
 find_dependency(Eigen3 REQUIRED)
 find_dependency(spdlog REQUIRED)
 find_dependency(fastrtps REQUIRED)
+find_dependency(fastcdr REQUIRED)
 
 # Add targets file
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
